--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,27 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+# Gradle
+org.gradle.jvmargs=-Xmx3G
 org.gradle.parallel=true
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop
 minecraft_version=1.18.2
-loader_version=0.16.7
-fabric_kotlin_version=1.12.3+kotlin.2.0.21
+loader_version=0.15.11
+fabric_kotlin_version=1.12.1+kotlin.2.0.20
+parchment_version=2022.11.06
+qm_version=26
 
 # Mod Properties
+mod_id=definedsblocks
+mod_name=Defined's Blocks
 mod_version=1.0.0
+mod_description=A mod that adds decoration blocks
+mod_license=MIT
 maven_group=dev.definedentity.definedsblocks
 archives_base_name=definedsblocks
 
 # Dependencies
 fabric_version=0.77.0+1.18.2
+
+lazydfu_version=0.1.2
+modmenu_version=3.2.5
+rei_version=8.4.737
+ctm_refabricated_version=QUrujfLU
