--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	alias libs.plugins.fabric
 	alias libs.plugins.kotlin
 	alias libs.plugins.spotless
+	alias libs.plugins.machete
 
 	id 'maven-publish'
 	id "idea"
