--- a/gradle/scripts/jars.gradle
+++ b/gradle/scripts/jars.gradle
@@ -2,6 +2,10 @@ base {
 	archivesName = project.archives_base_name
 }
 
+machete {
+    enabled = Boolean.getBoolean("PUBLISHING")
+}
+
 afterEvaluate {
     tasks.withType(org.gradle.jvm.tasks.Jar).configureEach {
           manifest.attributes([
