--- a/settings.gradle
+++ b/settings.gradle
@@ -24,6 +24,7 @@ dependencyResolutionManagement {
 		def macheteVersion = "1.+"
 		def fabricLoomVersion = "1.8-SNAPSHOT"
 		def kotlinVersion = "2.0.21"
+		def minotaurVersion = "2.+"
 
 		libs {
 			def fabric = version("fabric", fabricLoomVersion)
@@ -37,6 +38,9 @@ dependencyResolutionManagement {
 
 			def machete = version("machete", macheteVersion)
             plugin("machete", "io.github.p03w.machete").versionRef(machete)
+
+			def minotaur = version("minotaur", minotaurVersion)
+			plugin("minotaur", "com.modrinth.minotaur").versionRef(minotaur)
 		}
 	}
 }
